--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,6 +4,6 @@
 
 <body class="login">
       <%- include('partials/header') %>
-    <a href="users/login">Logear</a>
+    <a href="/users/login">Logear</a>
 </body>
 </html>
