--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,7 +3,7 @@
  <%- include('partials/head',{title: 'Login' }) %>
   <body>
     
-    <%- include('partials/header') %>
+    <%- include('partials/navbarheader') %>
     <main class="container mt-5">
         <div class="row">
             <div class="col-12 col-md-10 col-lg-6 mx-auto">
