--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,39 +1,7 @@
 <header>
-    
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid ">
-          <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/products">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Quienes somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">Contacto</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav ">
-                <li class="nav-item">
-                  <a class="nav-link" href="/users/registerUser">Crear cuenta</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/users/login">Ingresar</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link visually-hidden" href="#">Editar productos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link visually-hidden" href="#">Configuración</a>
-                </li>
-              
-              </ul>
-          </div>
-        </div>
-      </nav>
+    <div class="header col-12 col-mb-3">
+      <img src="images/logo.png" class="rounded mx-auto d-block" style="height: 200px;">
+    </div>
+   
     
 </header>
