--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -3,6 +3,7 @@
  <%- include('partials/head',{title: 'Productos' }) %>
   <body>
     <%- include('partials/header') %>
+    <%- include('partials/navbarheader') %>
     <main class="index-main">
       <div class="row">
         <div class="col-12 col-6 d-flex gap-3 ">
