--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html>
  <%- include('partials/head',{title: 'Index' }) %>
-  <body style="background-color: <%= locals.userData && userData.color %>;">
+  <body>
     
     <%- include('partials/header') %>
+    <%- include('partials/navbarheader') %>
+
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/images/cocinitas.jpeg" class="d-block w-100" data-bs-interval="1000" alt="No cargada1">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Local1</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/images/cocinitas.jpeg" class="d-block w-100" data-bs-interval="1000" alt="No cargada 2">
+        </div>
+        <div class="carousel-item">
+          <img src="/images/cocinitas.jpeg" class="d-block w-100" data-bs-interval="1000" alt="No cargada 3">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
     
-    <div class="row">
-      <div class="col-12">
-          <img src="/images/cocinitas.jpeg" alt="imagen" class="img-fluid">
-      </div>
-    </div>
     <main class="index-main">
       <div class="row">
-        <div class="col-12 col-6 d-flex gap-3 ">
+        <div class="col-12 col-6 d-flex gap-3 justify-content-between">
           <% listaProductos.forEach(producto => { %>
             <%- include('partials/cards',{
               ...producto
