--- a/src/views/partials/cards.ejs
+++ b/src/views/partials/cards.ejs
@@ -1,3 +1,4 @@
+
 <div class="card" style="width: 18rem;">
     <img src="/images/<%= category %>/<%= image %>" class="card-img-top img-fluid h-100 w-100" alt="<%= name %>">
     
@@ -23,9 +24,16 @@
             <% } else { %>
               <h3 class=" fs-5 fw-bold text-danger">$ <%= toThousand(price) %></h3>
             <% } %>
+            
+         
           
-          <a href="prduct/detail/<%= id %>"><i class="fa-solid fa-basket-shopping fa-beat fa-lg" style="color: #e2030f;"></i></a>
         </div>
+        <div class="card_text_description">
+          <a href="/products/detail/<%= id %>"><button type="button" class="btn btn-outline-danger">Ver Mas</button></a>
       </div>
+      </div>
+      <a class="card_agregar_carrito" href="#"><i class="fa-solid fa-basket-shopping fa-beat fa-lg" style="color: #e2030f;"></i></a>
     </div>
+    
+ 
 </div>
