--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -11,7 +11,7 @@
                 </div>
                 <div class="col-8 col-mb-4">
                     <div class="col-12">
-                        
+                        <%= name %>
                     </div>
 
                 </div>
