--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,100&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
+
 @import url('general.css');
 @import url('header.css');
 @import url('index.css');
